# rest

./: .gitignore  Caddyfile  Dockerfile  IMPLEMENTATION_PLAN.md  alembic.ini  api_contract.md  docker-compose.caddy.yml  docker-compose.infisical.yml  docker-compose.prod.yml  docker-compose.yml  env.example  garage.toml  nats_contract.md  pyproject.toml  setup-garage.sh
agent-files/: CAPABILITIES.md  SOUL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_transcriptions_table.py  003_add_password_hash_to_users.py  004_add_goclaw_session_key.py  4a04b7cf85dc_initial_schema.py  bc680e263f79_add_transcriptions_table.py
src/: main.py
src/api/: __init__.py  admin.py  auth.py  conversations.py  file_permissions.py  files.py  folders.py  internal.py  rag.py  transcribe.py  transcriptions.py  workspaces.py
src/core/: config.py  db.py  deps.py  logging.py  middleware.py  redis.py  security.py
src/models/: __init__.py  api_key.py  conversation.py  file.py  file_permission.py  folder.py  oauth.py  transcription.py  user.py  workspace.py
src/schemas/: auth.py  conversation.py  file.py  file_permission.py  folder.py  rag.py  transcription.py  workspace.py
src/scripts/: add_workspace_member.py  create_user.py  issue_token.py
src/services/: auth.py  conversation.py  file.py  file_permission.py  folder.py  goclaw_client.py  goclaw_rpc.py  goclaw_sync.py  meili.py  nats.py  rag_client.py  s3.py  shell_client.py  speaches_client.py  transcription.py  workspace.py  workspace_skills.py
src/subscribers/: conversation.py  indexing.py  transcription.py
src/tests/: conftest.py  test_auth.py  test_files.py  test_folders.py  test_workspaces.py
