[project]
name = "rest"
version = "0.1.0"
description = "Rest api for openclaw management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "meilisearch-python-sdk>=4.0.0",
    "nats-py>=2.14.0",
    "psycopg2-binary",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "fakeredis>=2.0.0",
    "isort>=8.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["src/tests"]
pythonpath = ["."]
